@@ -334,6 +334,8 @@ Ext.extend(MODx.tree.Tree,Ext.tree.TreePanel,{
         var i;
         if (!Ext.isObject(s) && !Ext.isArray(s)) {
             s = [s]; /* backwards compat */
+        } else {
+            s = s.slice();
         }
         if (Ext.isEmpty(p) || p == undefined) return; /* ignore invalid paths */
         if (n.expanded) { /* if expanding, add to state */
