@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#4726] Implement server-side state provider for modExt to fix size problems with cookies
 - Add message_key and json message_format option to system/registry/register/send processor
 - Allow raw messages to be returned from system/registry/register/read processor
 - Add include_keys option to modRegister implementations
